Use moment for better dates

--- a/api-viewer/app/index.html
+++ b/api-viewer/app/index.html
@@ -36,6 +36,7 @@
   <script src="bower_components/d3/d3.js"></script>
   <script src="bower_components/rickshaw/rickshaw.js"></script>
   <script src="bower_components/angular-rickshaw/rickshaw.js"></script>
+  <script src="bower_components/moment/moment.js"></script>
   <script src="services/icfp.js"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
